--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,15 +8,26 @@ dependencies = [
     "aiofiles>=25.1.0",
     "alembic>=1.18.1",
     "asyncpg>=0.31.0",
+    "email-validator>=2.3.0",
     "fastapi>=0.128.0",
     "httpx>=0.28.1",
     "markdown>=3.10.1",
-    "passlib[bcrypt]>=1.7.4",
+    "mypy>=1.19.1",
+    "passlib[argon2,bcrypt]>=1.7.4",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "pylint>=4.0.4",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
     "python-dotenv>=1.2.1",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.21",
-    "sqlalchemy[asyncio]>=2.0.46",
+    "sqlalchemy[asyncio,mypy]>=2.0.46",
+    "types-aiofiles>=25.1.0.20251011",
+    "types-markdown>=3.10.0.20251106",
+    "types-passlib>=1.7.7.20250602",
+    "types-python-dateutil>=2.9.0.20260124",
+    "types-python-jose>=3.5.0.20250531",
     "uvicorn[standard]>=0.40.0",
 ]
