--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -1,9 +1,9 @@
-pytest>=8.0.0
-pytest-cov>=4.1.0
-pytest-asyncio>=0.23.5
-mypy>=1.8.0
-pylint>=3.0.0
-httpx>=0.27.0
+pytest
+pytest-cov
+pytest-asyncio
+mypy
+pylint
+httpx
 types-python-jose
 types-passlib
 types-Markdown
